# data-lagoon

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PRD-v0.prd  PRD.md  README.md  TASKS.md  pyproject.toml
docs/: PRD.md  Spec.md  openspec_changes_implementation_order.md
docs/architecture/: README.md
openspec/: project.md
openspec/changes/add-basic-write-and-read-apis/: design.md  proposal.md  tasks.md
openspec/changes/add-core-dataset-and-catalog/: proposal.md  tasks.md
openspec/changes/add-core-infrastructure/: proposal.md  tasks.md
openspec/changes/add-core-scaffolding-uc-rest/: design.md  proposal.md  tasks.md
openspec/changes/add-engine-integrations-and-query-helpers/: proposal.md  tasks.md
openspec/changes/add-file-metadata-collection/: design.md  proposal.md  tasks.md
openspec/changes/add-fsspec-storage-integration/: design.md  proposal.md  tasks.md
openspec/changes/add-lagoon-core-scaffolding/: proposal.md  tasks.md
openspec/changes/add-parquet-file-metadata-cataloging/: design.md  proposal.md  tasks.md
openspec/changes/add-parquet-storage-layer-and-file-naming/: design.md  proposal.md  tasks.md
openspec/changes/add-partitioned-write-support/: design.md  proposal.md  tasks.md
openspec/changes/add-phase1-core-scaffolding/: proposal.md  tasks.md
openspec/changes/add-postgres-catalog-connector/: design.md  proposal.md  tasks.md
openspec/changes/add-predicate-and-partition-pruning-reader/: design.md  proposal.md  tasks.md
openspec/changes/add-schema-evolution-and-enforcement/: design.md  proposal.md  tasks.md
openspec/changes/add-statistics-collection-and-rowgroup-index/: design.md  proposal.md  tasks.md
openspec/changes/add-structured-dataset-references/: proposal.md  tasks.md
openspec/changes/add-testing-benchmarking-and-hardening/: design.md  proposal.md  tasks.md
openspec/changes/add-transactions-and-concurrency-control/: design.md  (+2 more)
src/data_lagoon/: __init__.py  catalog.py  dataset.py  schema_manager.py  storage.py
src/lagoon/: __init__.py  client.py  core.py  dispatch.py  facade.py  s3_config.py
tests/: test_catalog.py  test_dataset.py  test_dispatch.py
(+64 files in other folders)
