[project]
name = "data-lagoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "legout", email = "ligno.blades@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "pyarrow>=22.0.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
